force-app/main/default/objects/Location/fields/Avg_FootFall__c.field-meta.xml
<CustomField>
    <fullName>Avg_FootFall__c</fullName>
    <label>Avg FootFall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>