force-app/main/default/objects/Location/fields/Avg_Payback_Period__c.field-meta.xml
<CustomField>
    <fullName>Avg_Payback_Period__c</fullName>
    <label>Avg Payback Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>