force-app/main/default/objects/Location/fields/Avg_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Avg_Revenue__c</fullName>
    <label>Avg Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>