force-app/main/default/objects/Location/fields/Avg_Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Avg_Setup_Cost__c</fullName>
    <label>Avg Setup Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>