force-app/main/default/objects/Location/fields/Competiton_Score__c.field-meta.xml
<CustomField>
    <fullName>Competiton_Score__c</fullName>
    <label>Competiton Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>