force-app/main/default/objects/Location/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <externalId>true</externalId>
    <label>Location Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>