force-app/main/default/objects/Location/fields/No_of_Competitors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Competitors__c</fullName>
    <label>No. of Competitors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>