force-app/main/default/objects/Location/fields/Per_Capita_Income__c.field-meta.xml
<CustomField>
    <fullName>Per_Capita_Income__c</fullName>
    <label>Per Capita Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>