force-app/main/default/objects/Location/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <description>Contains the population for the location</description>
    <label>Population</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>